--- a/cg2labweb/Views/Home/Hank.cshtml
+++ b/cg2labweb/Views/Home/Hank.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<cg2lab.Models.Research>
+﻿@model IEnumerable<infra.Models.Research>
 @{
     ViewBag.Title = "Hank";
     Layout = "~/Views/Shared/HomePage.cshtml";
