--- a/cg2labweb/Views/Dashboard/UpdatePaper.cshtml
+++ b/cg2labweb/Views/Dashboard/UpdatePaper.cshtml
@@ -6,69 +6,77 @@
 <div class="content-wrapper" style="min-height: 431px;">
     <!-- Content Header (Page header) -->
     <div class="content-header">
-        <div class="container-fluid">
-            <div class="row mb-2">
-                <div class="col-sm-6">
+
+        <div class="col">
+
+            <div class="card card-primary">
+                <div class="card-header">
                     <h1>UpdatePaper(可上傳多個檔案)</h1>
-                </div><!-- /.col -->
-            </div><!-- /.row -->
-        </div><!-- /.container-fluid -->
-    </div>
-    <!-- /.content-header -->
-    <!-- Main content -->
-    <section class="content">
-        <div class="container-fluid">
-            <!-- Info boxes -->
-            <div class="row">
-
-                <form asp-controller="Dashboard" asp-action="UpdatePaper"
-                      enctype="multipart/form-data" method="post">
-                    <p><input type="file" name="files" class="btn btn-dark" multiple accept=".pdf" required /></p>
-
-                    <p><button type="submit" class="btn btn-outline-info">上傳檔案(PDF)</button></p>
-                </form>
-                <!-- /.col -->
-            </div>
-            <!-- /.row -->
-            <div class="row">
-                <div class="card-body">
-                    <div id="example2_wrapper" class="dataTables_wrapper dt-bootstrap4">
-                        <div class="row"><div class="col-sm-12 col-md-6"></div><div class="col-sm-12 col-md-6"></div></div><div class="row">
-                            <div class="col-sm-12">
-
-                                <table id="example2" class="table table-bordered table-hover dataTable dtr-inline" role="grid" aria-describedby="example2_info">
-                                    <thead>
-                                        <tr role="row">
-                                            <th class="sorting_asc" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Rendering engine: activate to sort column descending" aria-sort="ascending">Paper Name</th>
-                                            <th></th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        @foreach (var item in Model)
-                                        {
-                                            <tr role="row" class="odd">
-
-                                                <td class="sorting_1" tabindex="0"><a href="~/Mt/pdf/hank's/@item.fileName" target="_blank">@item.justName</a></td>
-                                                <td class="" onclick="return confirm('確定要刪除嗎?')">@Html.ActionLink("Delete", "Delete", new { fileName = item.fileName })</td>
-                                            </tr>
-                                        }
-
-                                    </tbody>
-                                    <tfoot>
-
-                                    </tfoot>
-                                </table>
-
-                            </div>
-                            <!--</div><div class="row"><div class="col-sm-12 col-md-5"><div class="dataTables_info" id="example2_info" role="status" aria-live="polite">Showing 1 to 10 of 57 entries</div></div><div class="col-sm-12 col-md-7"><div class="dataTables_paginate paging_simple_numbers" id="example2_paginate"><ul class="pagination"><li class="paginate_button page-item previous disabled" id="example2_previous"><a href="#" aria-controls="example2" data-dt-idx="0" tabindex="0" class="page-link">Previous</a></li><li class="paginate_button page-item active"><a href="#" aria-controls="example2" data-dt-idx="1" tabindex="0" class="page-link">1</a></li><li class="paginate_button page-item "><a href="#" aria-controls="example2" data-dt-idx="2" tabindex="0" class="page-link">2</a></li><li class="paginate_button page-item "><a href="#" aria-controls="example2" data-dt-idx="3" tabindex="0" class="page-link">3</a></li><li class="paginate_button page-item "><a href="#" aria-controls="example2" data-dt-idx="4" tabindex="0" class="page-link">4</a></li><li class="paginate_button page-item "><a href="#" aria-controls="example2" data-dt-idx="5" tabindex="0" class="page-link">5</a></li><li class="paginate_button page-item "><a href="#" aria-controls="example2" data-dt-idx="6" tabindex="0" class="page-link">6</a></li><li class="paginate_button page-item next" id="example2_next"><a href="#" aria-controls="example2" data-dt-idx="7" tabindex="0" class="page-link">Next</a></li></ul></div></div></div>    -->
-                        </div>
-                    </div>
                 </div>
 
+                <!-- /.content-header -->
+                <!-- Main content -->
+                <!-- Info boxes -->
+                <form role="form" asp-controller="Dashboard" asp-action="UpdatePaper"
+                      enctype="multipart/form-data" method="post">
+                    <div class="card-body">
+                        <div class="form-group">
 
-                <!-- /.row -->
-            </div><!--/. container-fluid -->
-    </section>
+                            <div class="custom-file">
+                                <p><input type="file" name="files" class="btn btn-default" multiple accept=".pdf" required /></p>
+
+                            </div>
+
+                        </div>
+
+                        <div class="form-group">
+                            <p><button type="submit" class="btn btn-outline-info" onclick="return confirm('確定要上傳嗎?')">上傳檔案(PDF)</button></p>
+                        </div>
+                    </div>
+                </form>
+
+                <!-- /.col -->
+            </div>
+        </div>
+        <!-- /.row -->
+        <div class="row">
+            <div class="card-body">
+                <div id="example2_wrapper" class="dataTables_wrapper dt-bootstrap4">
+                    <div class="row"><div class="col-sm-12 col-md-6"></div><div class="col-sm-12 col-md-6"></div></div><div class="row">
+                        <div class="col-sm-12">
+
+                            <table id="example2" class="table table-bordered table-hover dataTable dtr-inline" role="grid" aria-describedby="example2_info">
+                                <thead>
+                                    <tr role="row">
+                                        <th class="sorting_asc" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Rendering engine: activate to sort column descending" aria-sort="ascending">Paper Name</th>
+                                        <th></th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @foreach (var item in Model)
+                                    {
+                                        <tr role="row" class="odd">
+
+                                            <td class="sorting_1" tabindex="0"><a href="~/Mt/pdf/hank's/@item.fileName" target="_blank">@item.justName</a></td>
+                                            <td class="" onclick="return confirm('確定要刪除嗎?')">@Html.ActionLink("Delete", "DeleteHankPaper", new { filePat = item.fileName })</td>
+                                        </tr>
+                                    }
+
+                                </tbody>
+                                <tfoot>
+
+                                </tfoot>
+                            </table>
+
+                        </div>
+                        <!--</div><div class="row"><div class="col-sm-12 col-md-5"><div class="dataTables_info" id="example2_info" role="status" aria-live="polite">Showing 1 to 10 of 57 entries</div></div><div class="col-sm-12 col-md-7"><div class="dataTables_paginate paging_simple_numbers" id="example2_paginate"><ul class="pagination"><li class="paginate_button page-item previous disabled" id="example2_previous"><a href="#" aria-controls="example2" data-dt-idx="0" tabindex="0" class="page-link">Previous</a></li><li class="paginate_button page-item active"><a href="#" aria-controls="example2" data-dt-idx="1" tabindex="0" class="page-link">1</a></li><li class="paginate_button page-item "><a href="#" aria-controls="example2" data-dt-idx="2" tabindex="0" class="page-link">2</a></li><li class="paginate_button page-item "><a href="#" aria-controls="example2" data-dt-idx="3" tabindex="0" class="page-link">3</a></li><li class="paginate_button page-item "><a href="#" aria-controls="example2" data-dt-idx="4" tabindex="0" class="page-link">4</a></li><li class="paginate_button page-item "><a href="#" aria-controls="example2" data-dt-idx="5" tabindex="0" class="page-link">5</a></li><li class="paginate_button page-item "><a href="#" aria-controls="example2" data-dt-idx="6" tabindex="0" class="page-link">6</a></li><li class="paginate_button page-item next" id="example2_next"><a href="#" aria-controls="example2" data-dt-idx="7" tabindex="0" class="page-link">Next</a></li></ul></div></div></div>    -->
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <!-- /.row -->
+    </div><!--/. container-fluid -->
     <!-- /.content -->
 </div>
 
