--- a/cg2labweb/Views/Shared/Dash_Layout.cshtml
+++ b/cg2labweb/Views/Shared/Dash_Layout.cshtml
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <title>AdminLTE 3 | Dashboard 2</title>
+    <title>Dashboard Cg2Lab</title>
 
     <!-- Tell the browser to be responsive to screen width -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -146,7 +146,12 @@
                                             </li>
                                         </ul>
                                     </li>
-
+                                    <li class="nav-item">
+                                        <a href="@Url.Action("UpdateMasterPaper","Dashboard")" class="nav-link">
+                                            <i class="far fa-circle nav-icon"></i>
+                                            <p>碩士論文上傳</p>
+                                        </a>
+                                    </li>
                                 </ul>
                             </nav>
                             <!-- /.sidebar-menu -->
