--- a/cg2labweb/Views/Shared/HomePage.cshtml
+++ b/cg2labweb/Views/Shared/HomePage.cshtml
@@ -51,7 +51,7 @@
     <div class="navbar">
 
         <div class="container" style="width:100%;">
-            <img class="chin-yiLogo" src="~/Mt/img/chin-yiLogo.png" />
+            <img style="width:22%;height:30%" class="chin-yiLogo" src="~/Mt/img/chin-yiLogo.png" />
             <nav class="navbar navbar-inverse navbar-fixed-top" style="width:auto;margin-left:25%;">
                 <div class="container" style="width:100%;">
                     <div class="navbar-header">
@@ -71,7 +71,7 @@
                             <li><a href="#">未定</a></li>
                             <li><a href="#">未定</a></li>
                             <li class="dropdown">
-                                <a  class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">有關實驗室 <span class="caret"></span></a>
+                                <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">有關實驗室 <span class="caret"></span></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="@Url.Action("Reseach","Home")">過去研究</a></li>
                                     <li><a href="@Url.Action("Device","Home")">實驗室設備</a></li>
@@ -83,7 +83,7 @@
                                 </ul>
                             </li>
                             <li class="dropdown">
-                                <a  class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" >學生專區 <span class="caret"></span></a>
+                                <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">學生專區 <span class="caret"></span></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="#">專題生</a></li>
                                     <li><a href="#">Another action</a></li>
@@ -106,19 +106,30 @@
     ================================================== -->
     @RenderBody()
 
-    
+
 
     <hr class="featurette-divider">
 
     <!-- /END THE FEATURETTES -->
     <!-- FOOTER -->
-    <div class="container marketing " >
-    <footer>
-        
-        <p>&copy; @DateTime.Now.Year 國立勤益科技大學-電腦圖學與遊戲研究室 </p>
-    </footer>
+    <div class="container marketing ">
+        <footer>
+
+            <p>&copy; @DateTime.Now.Year 國立勤益科技大學-電腦圖學與遊戲研究室 </p>
+        </footer>
 
     </div><!-- /.container -->
+    <!-- Bootstrap core JavaScript
+     ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ" crossorigin="anonymous"></script>
+    <script>window.jQuery || document.write('<script src="../../Mt/assets/js/vendor/jquery.min.js"><\/script>')</script>
+    <script src="../../Mt/dist/js/bootstrap.min.js"></script>
+    <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
+    <script src="../../Mt/assets/js/vendor/holder.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="../../Mt/assets/js/ie10-viewport-bug-workaround.js"></script>
+
 </body>
 </html>
 
