完成專題生作品展示頁面

--- a/cg2labweb/Views/Home/Index.cshtml
+++ b/cg2labweb/Views/Home/Index.cshtml
@@ -39,7 +39,7 @@
 
     <!-- Carousel
     ================================================== -->
-    <div id="myCarousel" class="carousel slide" data-ride="carousel" >
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
         <ol class="carousel-indicators">
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -59,7 +59,7 @@
             </div>
             <div class="item">
                 <div class="img-magnifier-container"><img class="second-slide " style="width:50%;height:50%;margin-left:25%;" src="~/Mt/img/ImgHome/走廊海報_01實驗室特色 20091126 1440.jpg" alt="Second slide"></div>
-               
+
                 <div class="container">
                     <div class="carousel-caption">
                         <!--<h1>特色</h1>-->
@@ -93,7 +93,7 @@
             <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
         </a>
-        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next"  >
+        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
             <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
         </a>
@@ -116,7 +116,7 @@
                 </a>
                 <h2>陳宏光<small>教授</small></h2>
                 <p>實驗室總負責人</p>
-                <a class="btn btn-info" href="@Url.Action("Hank","Home")" >更多資訊</a>
+                <a class="btn btn-info" href="@Url.Action("Hank","Home")">更多資訊</a>
                 <!--<p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>-->
             </div>
 
@@ -152,7 +152,11 @@
         <div class="row featurette">
             <div class="col-md-7 col-md-push-5">
                 <h2 class="featurette-heading">3D列印機 <span class="text-muted">(3D Printer)</span></h2>
-                <p class="lead">建模並將作品給列印出來吧!</p>
+                <p class="lead">
+                    3D列印（英語：3D printing），又稱增材製造、積層製造（英語：Additive Manufacturing，AM），可指任何列印三維物體的過程。[1]3D列印主要是一個不斷添加的過程，在電腦控制下層疊原材料。[2]3D列印的內容可以來源於三維模型或其他電子資料，其列印出的三維物體可以擁有任何形狀和幾何特徵。3D列印機屬於工業機器人的一種。
+
+                    「3D列印」這個詞的原意是指將材料有序沉積到粉末層噴墨列印頭的過程。最近此詞的含義已經擴大到廣泛包括的各種技術，如擠壓和燒結過程。技術標準一般使用「增量製造」這個術語來表達這個廣泛含義。
+                </p>
             </div>
             <div class="col-md-5 col-md-pull-7">
                 <img class="featurette-image img-responsive center-block" src="~/Mt/img/labDevice/3DPrint.jpg" alt="Generic placeholder image">
@@ -164,7 +168,7 @@
         <div class="row featurette">
             <div class="col-md-4">
                 <h2 class="featurette-heading">虛擬實境開發平台<span class="text-muted">(VR)</span></h2>
-                <p class="lead">研究各種遊戲，就連VR遊戲也不放過!</p>
+                <p class="lead">虛擬實境（英語：virtual reality，縮寫VR），簡稱虛擬技術，也稱虛擬環境，是利用電腦類比產生一個三維空間的虛擬世界，提供使用者關於視覺等感官的類比，讓使用者感覺彷彿身歷其境，可以即時、沒有限制地觀察三維空間內的事物。使用者進行位置移動時，電腦可以立即進行複雜的運算，將精確的三維世界影像傳回產生臨場感。該技術整合了電腦圖形、電腦仿真、人工智慧、感應、顯示及網路並列處理等技術的最新發展成果，是一種由電腦技術輔助生成的高技術類比系統。</p>
             </div>
             <div class="col-md-8">
                 <img class="featurette-image img-responsive center-block" src="~/Mt/img/labDevice/VR.jpg" alt="Generic placeholder image">
@@ -172,10 +176,11 @@
         </div>
 
         
-
         <!-- /END THE FEATURETTES -->
-    </div> 
+    </div>
+    
 
-   
+    
 </body>
+
 </html>
