--- a/cg2labweb/Views/Shared/HomePage.cshtml
+++ b/cg2labweb/Views/Shared/HomePage.cshtml
@@ -75,11 +75,9 @@
                                 <ul class="dropdown-menu">
                                     <li><a href="@Url.Action("Reseach","Home")">過去研究</a></li>
                                     <li><a href="@Url.Action("Device","Home")">實驗室設備</a></li>
-                                    <li><a href="#">Something else here</a></li>
-                                    <li role="separator" class="divider"></li>
-                                    <li class="dropdown-header">Nav header</li>
-                                    <li><a href="#">Separated link</a></li>
-                                    <li><a href="#">One more separated link</a></li>
+                                    <li><a href="@Url.Action("Institute","Home")">歷屆研究生論文</a></li>
+                                    <li><a href="@Url.Action("UndergraduateStudents","Home")">歷屆專題生作品</a></li>
+                                    
                                 </ul>
                             </li>
                             <li class="dropdown">
