完善專題生成果上傳

--- a/cg2labweb/Views/Dashboard/UpdateMasterPaper.cshtml
+++ b/cg2labweb/Views/Dashboard/UpdateMasterPaper.cshtml
@@ -69,7 +69,7 @@
                                             <td class="sorting_1" tabindex="0">@item.MasterName</td>
                                             <td class="sorting_1" tabindex="0"><a href="~/Mt/pdf/MasterDegree/@item.MasterName/@item.FileFullName" target="_blank">@item.FileName</a></td>
                                             <td class="sorting_1" tabindex="0">@item.dateTime</td>
-                                            <td class="btn btn-default" onclick="return confirm('確定要刪除嗎?')">@Html.ActionLink("Delete", "DeleteMasterPaper", new { filePath = item.FilePath })</td>
+                                            <td class="btn btn-default" onclick="return confirm('確定要刪除嗎?')">@Html.ActionLink("Delete", "DeleteMasterPaper", new { id = item.Id , filePath=item.FilePath})</td>
                                         </tr>
                                     }
 
