--- a/cg2labweb/Views/Shared/Dash_Layout.cshtml
+++ b/cg2labweb/Views/Shared/Dash_Layout.cshtml
@@ -128,7 +128,7 @@
                             <nav class="mt-2">
                                 <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
                                     <!-- Add icons to the links using the .nav-icon class
-                            with font-awesome or any other icon font library -->
+    with font-awesome or any other icon font library -->
                                     <li class="nav-item has-treeview">
                                         <a href="#" class="nav-link">
                                             <i class="nav-icon far fa-plus-square"></i>
@@ -150,6 +150,12 @@
                                         <a href="@Url.Action("UpdateMasterPaper","Dashboard")" class="nav-link">
                                             <i class="far fa-circle nav-icon"></i>
                                             <p>碩士論文上傳</p>
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="@Url.Action("UpdateUndergraduateStudentsWork","Dashboard")" class="nav-link">
+                                            <i class="far fa-circle nav-icon"></i>
+                                            <p>專題生成果上傳</p>
                                         </a>
                                     </li>
                                 </ul>
