--- a/cg2labweb/Views/Home/Reseach.cshtml
+++ b/cg2labweb/Views/Home/Reseach.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<cg2lab.Models.Research>
+﻿@model IEnumerable<infra.ViewModels.ViewResearch>
 @{
     ViewBag.Title = "Reseach";
     Layout = "~/Views/Shared/HomePage.cshtml";
