研討會論文及期刊論文完成

--- a/cg2labweb/Views/Home/Hank.cshtml
+++ b/cg2labweb/Views/Home/Hank.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<infra.Models.Research>
+﻿@model IEnumerable<infra.ViewModels.ViewHankPage>
 @{
     ViewBag.Title = "Hank";
     Layout = "~/Views/Shared/HomePage.cshtml";
@@ -23,7 +23,6 @@
         th {
             background-color: silver;
         }
-        
     </style>
 </head>
 
@@ -48,6 +47,10 @@
                     <ol>
                         <li> Hung-Kuang Chen, Chin-Shyrung Fahn, Jeffery, J. P. Tsai, and Ming-Bo Lin, “A novel cache-based approach to large polygonal mesh simplification,” Journal of Information Science and Engineering, Vol. 22, No. 4, Pages 843-861, July 2006, SCI</li>
                         <li>Hung-Kuang Chen, Chin-Shyurng Fahn, Jeffrey J. P. Tsai, Rong-Ming Chen, Ming-Bo Lin, “Generating high-quality discrete LOD meshes for 3D computer games in linear time,” Multimedia Systems, Volume 11, Issue 5, Jun 2006, Pages 480 – 494, DOI 10.1007/s00530-006-0017-1, <a href="http://dx.doi.org/10.1007/s00530-006-0017-1" class="btn-info">點此查看</a>, SCI</li>
+                        @foreach (var item in Model)
+                        {
+                            <li>@item.JournalPaper</li>
+                        }
                     </ol>
 
 
@@ -66,31 +69,39 @@
                         <li><p>Interaction, UAHCI 2007. Held as Part of HCI Int. 2007 Proc., 2007, p 818-827.(EI)</p></li>
                         <li><p>Hung-Kuang Chen, Chin-Shyurng Fahn, Jeffrey J.P. Tsai, Rong-Ming Chen, Ming-Bo Lin, “A Linear Time Algorithm for High Quality Mesh Simplification,” in Proc. of IEEE 6th International Symposium on Multimedia Software Engineering, Miami, USA, pp. 169-176, Dec 2004</p></li>
                         <li><p>K.C. Shih, R.M. Chen, R.M. Hu, F.M. Liu, H.K. Chen, Jeffrey J.P. Tsai, “Prediction of Gene Regulatory Networks using Differential Expression of cDNA Microarray Data,” in Proc. of IEEE 6th International Symposium on Multimedia Software Engineering, Miami, USA, pp. 378-385, Dec 2004</p></li>
+                        @foreach (var item in Model)
+                        {
+                            <li><p>@item.ViewHankPageSeminarPaper.SeminarPaper</p></li>
+                        }
                     </ol>
                     <hr class="featurette-divider">
                     <h2>計畫與產學合作</h2>
 
-                    <h4><strong> 98學年度 計畫</strong></h4>
+                    <h4><strong> 計畫</strong></h4>
                     <div style="overflow-x:auto;">
                         <table>
                             <tr>
+                                <th>學年度 </th>
                                 <th>項目</th>
                                 <th>研究題目</th>
                             </tr>
                             <tr>
+                                <td>98學年度 </td>
                                 <td>國科會計畫</td>
                                 <td>三維網格之漸進式數位浮水印認證之研究</td>
                             </tr>
                         </table>
                     </div>
-                    <h4><strong> 97學年度 產學研究</strong></h4>
+                    <h4><strong>產學研究</strong></h4>
                     <div style="overflow-x:auto;">
                         <table>
                             <tr>
+                                <th>學年度</th>
                                 <th>項目</th>
                                 <th>研究題目</th>
                             </tr>
                             <tr>
+                                <td>97學年度</td>
                                 <td>產學研究</td>
                                 <td>相片鉛筆速描效果自動轉換系統技術之開發與研究</td>
                             </tr>
@@ -99,7 +110,7 @@
                     <hr class="featurette-divider">
                     <h2>出版</h2>
                     <div>
-                        <img src="~/Mt/img/bookNovel/hankpublish.PNG" style="width:100%;height:100%;"/>
+                        <img src="~/Mt/img/bookNovel/hankpublish.PNG" style="width:100%;height:100%;" />
                     </div>
                     <hr class="featurette-divider">
                     <h2>榮譽榜</h2>
@@ -152,7 +163,7 @@
                     <ol class="list-unstyled">
                         @foreach (var item in Model)
                         {
-                            <li><a href="~/Mt/pdf/hank's/@item.fileName" target="_blank">@item.justName</a></li>
+                            <li><a href="~/Mt/pdf/hank's/@item.research.fileName" target="_blank">@item.research.justName</a></li>
                         }
 
                     </ol>
@@ -170,7 +181,7 @@
         </div><!-- /.row -->
 
     </div><!-- /.container -->
-  
+
 </body>
 </html>
 
