--- a/cg2labweb/Views/Shared/Dash_Layout.cshtml
+++ b/cg2labweb/Views/Shared/Dash_Layout.cshtml
@@ -133,7 +133,7 @@
                                         <a href="#" class="nav-link">
                                             <i class="nav-icon far fa-plus-square"></i>
                                             <p>
-                                                Hank
+                                                Hank個人網站
                                                 <i class="fas fa-angle-left right"></i>
                                             </p>
                                         </a>
@@ -142,6 +142,14 @@
                                                 <a href="@Url.Action("UpdatePaper","Dashboard")" class="nav-link">
                                                     <i class="far fa-circle nav-icon"></i>
                                                     <p>上傳論文</p>
+                                                </a>
+                                                <a href="@Url.Action("ViewJournalPapersList","Dashboard")" class="nav-link">
+                                                    <i class="far fa-circle nav-icon"></i>
+                                                    <p>期刊論文清單</p>
+                                                </a>
+                                                <a href="@Url.Action("ViewSeminarPapers","Dashboard")" class="nav-link">
+                                                    <i class="far fa-circle nav-icon"></i>
+                                                    <p>研討會論文清單</p>
                                                 </a>
                                             </li>
                                         </ul>
