--- a/cg2labweb/Views/Dashboard/SeminarPapers.cshtml
+++ b/cg2labweb/Views/Dashboard/SeminarPapers.cshtml
@@ -14,14 +14,14 @@
                 </div>
                 <!-- /.card-header -->
                 <!-- form start -->
-                @using (Html.BeginForm("UpdateUndergraduateStudentsWork", "Dashboard", FormMethod.Post))
+                @using (Html.BeginForm("SeminarPapers", "Dashboard", FormMethod.Post))
                 {
 
                     <!--<form role="form" asp-controller="Dashboard" asp-action="UpdateUndergraduateStudentsWork"
                     enctype="multipart/form-data" method="post">-->
                     <div class="card-body">
                         <div class="form-group">
-                            <label for="exampleInputEmail1">研討會論文更新</label>
+                            <label for="exampleInputEmail1">名稱</label>
                             @Html.EditorFor(model => model.SeminarPaper, new { htmlAttributes = new { @class = "form-control" } })
                             @Html.ValidationMessageFor(model => model.SeminarPaper, "", new { @class = "text-danger" })
                             <!--<input type="text" class="form-control" id="AuthorName" name="teammate" required>-->
