--- a/cg2labweb/Views/Shared/Dash_Layout.cshtml
+++ b/cg2labweb/Views/Shared/Dash_Layout.cshtml
@@ -140,16 +140,28 @@
                                         <ul class="nav nav-treeview">
                                             <li class="nav-item">
                                                 <a href="@Url.Action("UpdatePaper","Dashboard")" class="nav-link">
-                                                    <i class="far fa-circle nav-icon"></i>
+                                                    <i class="far fa-book nav-icon"></i>
                                                     <p>上傳論文</p>
                                                 </a>
                                                 <a href="@Url.Action("ViewJournalPapersList","Dashboard")" class="nav-link">
-                                                    <i class="far fa-circle nav-icon"></i>
+                                                    <i class="far fa-book nav-icon"></i>
                                                     <p>期刊論文清單</p>
                                                 </a>
                                                 <a href="@Url.Action("ViewSeminarPapers","Dashboard")" class="nav-link">
-                                                    <i class="far fa-circle nav-icon"></i>
+                                                    <i class="far fa-book nav-icon"></i>
                                                     <p>研討會論文清單</p>
+                                                </a>
+                                                <a href="@Url.Action("ViewSeminarPapers","Dashboard")" class="nav-link">
+                                                    <i class="far fa-book nav-icon"></i>
+                                                    <p>計畫清單</p>#
+                                                </a>
+                                                <a href="@Url.Action("ViewSeminarPapers","Dashboard")" class="nav-link">
+                                                    <i class="far fa-book nav-icon"></i>
+                                                    <p>產學研究</p>#
+                                                </a>
+                                                <a href="@Url.Action("ViewSeminarPapers","Dashboard")" class="nav-link">
+                                                    <i class="far fa-book nav-icon" ></i>
+                                                    <p>榮譽榜</p>#
                                                 </a>
                                             </li>
                                         </ul>
