--- a/cg2labweb/Views/Home/Hank.cshtml
+++ b/cg2labweb/Views/Home/Hank.cshtml
@@ -49,7 +49,10 @@
                         <li>Hung-Kuang Chen, Chin-Shyurng Fahn, Jeffrey J. P. Tsai, Rong-Ming Chen, Ming-Bo Lin, “Generating high-quality discrete LOD meshes for 3D computer games in linear time,” Multimedia Systems, Volume 11, Issue 5, Jun 2006, Pages 480 – 494, DOI 10.1007/s00530-006-0017-1, <a href="http://dx.doi.org/10.1007/s00530-006-0017-1" class="btn-info">點此查看</a>, SCI</li>
                         @foreach (var item in Model)
                         {
-                            <li>@item.JournalPaper</li>
+                            for (int i = 0; i < item.JournalPapers.Count; i++)
+                            {
+                                <li>@item.JournalPapers[i].JournalPaper</li>
+                            }
                         }
                     </ol>
 
@@ -71,7 +74,10 @@
                         <li><p>K.C. Shih, R.M. Chen, R.M. Hu, F.M. Liu, H.K. Chen, Jeffrey J.P. Tsai, “Prediction of Gene Regulatory Networks using Differential Expression of cDNA Microarray Data,” in Proc. of IEEE 6th International Symposium on Multimedia Software Engineering, Miami, USA, pp. 378-385, Dec 2004</p></li>
                         @foreach (var item in Model)
                         {
-                            <li><p>@item.ViewHankPageSeminarPaper.SeminarPaper</p></li>
+                            for (int i = 0; i < item.viewHankPageSeminarPapers.Count; i++)
+                            {
+                                <li><p>@item.viewHankPageSeminarPapers[i].SeminarPaper</p></li>
+                            }
                         }
                     </ol>
                     <hr class="featurette-divider">
@@ -86,9 +92,18 @@
                                 <th>研究題目</th>
                             </tr>
                             <tr>
-                                <td>98學年度 </td>
+                                <td>98 </td>
                                 <td>國科會計畫</td>
                                 <td>三維網格之漸進式數位浮水印認證之研究</td>
+                                @foreach (var item in Model)
+                                {
+                                    for (int i = 0; i < item.viewHankPageProjects.Count; i++)
+                                    {
+                                        <td>@item.viewHankPageProjects[i].schoolYear </td>
+                                        <td>@item.viewHankPageProjects[i].projectTopice</td>
+                                        <td>@item.viewHankPageProjects[i].projectName</td>
+                                    }
+                                }
                             </tr>
                         </table>
                     </div>
@@ -104,6 +119,15 @@
                                 <td>97學年度</td>
                                 <td>產學研究</td>
                                 <td>相片鉛筆速描效果自動轉換系統技術之開發與研究</td>
+                                @foreach (var item in Model)
+                                {
+                                    for (int i = 0; i < item.ViewIndustryResearches.Count; i++)
+                                    {
+                                        <td>@item.ViewIndustryResearches[i].schoolYear</td>
+                                        <td>@item.ViewIndustryResearches[i].projectTopice</td>
+                                        <td>@item.ViewIndustryResearches[i].projectName</td>
+                                    }
+                                }
                             </tr>
                         </table>
                     </div>
@@ -123,10 +147,21 @@
                                 <th>榮譽類別</th>
                             </tr>
                             <tr>
+
                                 <td>96</td>
                                 <td>陳文淵、陳宏光、曾振東、黃國興、賴雲龍</td>
                                 <td>國立勤益科技大學97年度「推動科技研究發展獎勵」得獎教師</td>
                                 <td>學術論文獎</td>
+                                @foreach (var item in Model)
+                                {
+                                    for (int i = 0; i < item.viewHankPageHonors.Count; i++)
+                                    {
+                                        <td>@item.viewHankPageHonors[i].schoolYear</td>
+                                        <td>@item.viewHankPageHonors[i].Name</td>
+                                        <td>@item.viewHankPageHonors[i].DoWhat</td>
+                                        <td>@item.viewHankPageHonors[i].Award</td>
+                                    }
+                                }
                             </tr>
                         </table>
                     </div>
@@ -163,19 +198,22 @@
                     <ol class="list-unstyled">
                         @foreach (var item in Model)
                         {
-                            <li><a href="~/Mt/pdf/hank's/@item.research.fileName" target="_blank">@item.research.justName</a></li>
+                            for (int i = 0; i < item.researches.Count; i++)
+                            {
+                                <li><a href="~/Mt/pdf/hank's/@item.researches[i].fileName" target="_blank">@item.researches[i].justName</a></li>
+                            }
                         }
 
                     </ol>
                 </div>
-                <div class="sidebar-module">
+                <!--<div class="sidebar-module">
                     <h4>Elsewhere</h4>
                     <ol class="list-unstyled">
                         <li><a href="#">GitHub</a></li>
                         <li><a href="#">Twitter</a></li>
                         <li><a href="#">Facebook</a></li>
                     </ol>
-                </div>
+                </div>-->
             </div><!-- /.blog-sidebar -->
 
         </div><!-- /.row -->
