完成計畫及產學研究後台

--- a/cg2labweb/Views/Shared/Dash_Layout.cshtml
+++ b/cg2labweb/Views/Shared/Dash_Layout.cshtml
@@ -151,13 +151,13 @@
                                                     <i class="far fa-book nav-icon"></i>
                                                     <p>研討會論文清單</p>
                                                 </a>
-                                                <a href="@Url.Action("ViewSeminarPapers","Dashboard")" class="nav-link">
+                                                <a href="@Url.Action("ViewHankProject","Dashboard")" class="nav-link">
                                                     <i class="far fa-book nav-icon"></i>
-                                                    <p>計畫清單</p>#
+                                                    <p>計畫清單</p>
                                                 </a>
-                                                <a href="@Url.Action("ViewSeminarPapers","Dashboard")" class="nav-link">
+                                                <a href="@Url.Action("ViewIndustryResearch","Dashboard")" class="nav-link">
                                                     <i class="far fa-book nav-icon"></i>
-                                                    <p>產學研究</p>#
+                                                    <p>產學研究</p>
                                                 </a>
                                                 <a href="@Url.Action("ViewSeminarPapers","Dashboard")" class="nav-link">
                                                     <i class="far fa-book nav-icon" ></i>
