榮譽榜後台完成

--- a/cg2labweb/Views/Dashboard/UpdateIndustryResearch.cshtml
+++ b/cg2labweb/Views/Dashboard/UpdateIndustryResearch.cshtml
@@ -14,7 +14,7 @@
                     </div>
                     <!-- /.card-header -->
                     <!-- form start -->
-                    @using (Html.BeginForm("UpdateProject", "Dashboard", FormMethod.Post))
+                    @using (Html.BeginForm("UpdateIndustryResearch", "Dashboard", FormMethod.Post))
                     {
 
                         <!--<form role="form" asp-controller="Dashboard" asp-action="UpdateUndergraduateStudentsWork"
