--- a/cg2labweb/Views/Shared/Dash_Layout.cshtml
+++ b/cg2labweb/Views/Shared/Dash_Layout.cshtml
@@ -159,9 +159,9 @@
                                                     <i class="far fa-book nav-icon"></i>
                                                     <p>產學研究</p>
                                                 </a>
-                                                <a href="@Url.Action("ViewSeminarPapers","Dashboard")" class="nav-link">
+                                                <a href="@Url.Action("ViewHankPageHonor","Dashboard")" class="nav-link">
                                                     <i class="far fa-book nav-icon" ></i>
-                                                    <p>榮譽榜</p>#
+                                                    <p>榮譽榜</p>
                                                 </a>
                                             </li>
                                         </ul>
