--- a/cg2labweb/Views/Shared/HomePage.cshtml
+++ b/cg2labweb/Views/Shared/HomePage.cshtml
@@ -17,7 +17,7 @@
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <link href="~/Mt/assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
-   
+
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -35,21 +35,21 @@
         body {
             font-family: Arial;
         }
+
         .chin-yiLogo {
             width: 20%;
             height: 20%;
         }
-        .left{
-            margin-left:2.5%;
-        }
 
+        .left {
+            margin-left: 2.5%;
+        }
     </style>
 </head>
 <body>
     <!-- NAVBAR
     ================================================== -->
     <div class="navbar">
-
         <div class="container" style="width:100%;">
             <img style="width:22%;height:30%" class="chin-yiLogo" src="~/Mt/img/chin-yiLogo.png" />
             <nav class="navbar navbar-inverse navbar-fixed-top" style="width:auto;margin-left:25%;">
@@ -77,7 +77,7 @@
                                     <li><a href="@Url.Action("Device","Home")">實驗室設備</a></li>
                                     <li><a href="@Url.Action("Institute","Home")">歷屆研究生論文</a></li>
                                     <li><a href="@Url.Action("UndergraduateStudents","Home")">歷屆專題生作品</a></li>
-                                    
+
                                 </ul>
                             </li>
                             <li class="dropdown">
@@ -92,12 +92,12 @@
                                     <li><a href="#">One more separated link</a></li>
                                 </ul>
                             </li>
+                            <li style="left:450px"><a href="@Url.Action("Login","Login")">登入</a></li>
 
                         </ul>
                     </div>
                 </div>
             </nav>
-
         </div>
     </div>
     <!-- NAVBAR
